update tlatools to version 1.7.3