@@ -21,13 +21,14 @@ public interface ExploreNode {
     * descendant foo.                                                      *
     ***********************************************************************/
   public String levelDataToString();
-  public void   walkGraph(Hashtable semNodesTable);
+
+  public void   walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, final ExplorerVisitor visitor);
     /***********************************************************************
     * This method is apparently supposed to insert an entry in             *
     * semNodesTable for itself and every descendant in the semantic tree   *
     * by executing                                                         *
     *                                                                      *
-    *     Integer uid = new Integer(myUID);                                *
+    *     Integer uid = Integer.valueOf(myUID);                                *
     *     if (semNodesTable.get(uid) != null) return;                      *
     *     semNodesTable.put(uid, this);                                    *
     *                                                                      *
