@@ -6,11 +6,14 @@ package tla2sany.semantic;
 
 import java.util.Hashtable;
 
-import tla2sany.st.TreeNode;
-import tla2sany.utilities.Strings;
-
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
+
+import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
+import tla2sany.st.TreeNode;
+import tla2sany.utilities.Strings;
+import tla2sany.xml.SymbolContext;
 
 /***************************************************************************
 * An assume prove node represents something like                           *
@@ -191,6 +194,7 @@ public class AssumeProveNode extends LevelNode {
   * compute the level-related fields for an OpApplNode.  This seems        *
   * reasonable, but I don't know if it's really correct.  -   LL           *
   *************************************************************************/
+  @Override
   public boolean levelCheck(int iter) {
     /***********************************************************************
     * Return immediately if this this.levelCheck(i) has already been       *
@@ -337,6 +341,7 @@ public class AssumeProveNode extends LevelNode {
   /**
    * The children of this node are the assumes and prove expressions.
    */
+  @Override
   public SemanticNode[] getChildren() {
      SemanticNode[] res = new SemanticNode[this.assumes.length + 1];
      res[assumes.length] = this.prove;
@@ -346,16 +351,19 @@ public class AssumeProveNode extends LevelNode {
      return res;
   }
 
-  public final void walkGraph(Hashtable h) {
-    Integer uid = new Integer(myUID);
+  @Override
+  public final void walkGraph(Hashtable<Integer, ExploreNode> h, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (h.get(uid) != null) return;
     h.put(uid, this);
+    visitor.preVisit(this);
     int i = 0 ;
     while (i <  assumes.length) {
-      assumes[i].walkGraph(h) ;
+      assumes[i].walkGraph(h, visitor) ;
       i = i+1;
      } ;
-    prove.walkGraph(h) ;
+    prove.walkGraph(h, visitor) ;
+    visitor.postVisit(this);
   } // end walkGraph()
 
 
@@ -363,6 +371,7 @@ public class AssumeProveNode extends LevelNode {
    * Displays this node as a String, implementing ExploreNode interface; depth
    * parameter is a bound on the depth of the portion of the tree that is displayed.
    */
+  @Override
   public final String toString(int depth) {
     if (depth <= 0) return "";
     String assumeStr = "" ;
@@ -385,7 +394,8 @@ public class AssumeProveNode extends LevelNode {
   * End fields and methods implementing the ExplorerNode interface:        *
   *************************************************************************/
 
-  public Element getLevelElement(Document doc, tla2sany.xml.SymbolContext context) {
+  @Override
+  public Element getLevelElement(Document doc, SymbolContext context) {
     Element e = doc.createElement("AssumeProveNode");
     Element antecedent = doc.createElement("assumes");
     Element succedent = doc.createElement("prove");
