@@ -3,11 +3,14 @@ package tla2sany.semantic;
 
 import java.util.Hashtable;
 
-import tla2sany.st.TreeNode;
-import tla2sany.utilities.Strings;
-
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
+
+import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
+import tla2sany.st.TreeNode;
+import tla2sany.utilities.Strings;
+import tla2sany.xml.SymbolContext;
 
 /***************************************************************************
 * This class represents a leaf proof.  It is of kind LeafProffKind         *
@@ -70,6 +73,7 @@ public class LeafProofNode extends ProofNode {
   public boolean getOmitted() {return omitted ;} ;
   public boolean getOnlyFlag() {return isOnly ;} ;
 
+  @Override
   public boolean levelCheck(int iter) {
     /***********************************************************************
     * Level checking is performed by level-checking the facts.  Since the  *
@@ -84,6 +88,7 @@ public class LeafProofNode extends ProofNode {
    * The children are the facts.
    * @see tla2sany.semantic.SemanticNode#getChildren()
    */
+  @Override
   public SemanticNode[] getChildren() {
       if (this.facts == null || this.facts.length == 0) {
           return null;
@@ -95,19 +100,23 @@ public class LeafProofNode extends ProofNode {
       return res;
    }
 
-  public void walkGraph(Hashtable semNodesTable) {
-    Integer uid = new Integer(myUID);
+  @Override
+  public void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
-    semNodesTable.put(new Integer(myUID), this);
+    semNodesTable.put(uid, this);
+    visitor.preVisit(this);
     for (int  i = 0; i < facts.length; i++) {
-      facts[i].walkGraph(semNodesTable);
+      facts[i].walkGraph(semNodesTable, visitor);
       } ;
     /***********************************************************************
     * Note: there's no need to walk the defs array because all the nodes   *
     * on it are walked from the nodes under which they appear.             *
     ***********************************************************************/
+      visitor.postVisit(this);
    }
 
+  @Override
   public String toString(int depth) {
     if (depth <= 0) return "";
     String ret = "\n*LeafProofNode:\n"
@@ -125,7 +134,8 @@ public class LeafProofNode extends ProofNode {
     return ret;
    }
 
-  protected Element getLevelElement(Document doc, tla2sany.xml.SymbolContext context) {
+  @Override
+  protected Element getLevelElement(Document doc, SymbolContext context) {
     Element e;
 
     if (getOmitted()) {
