@@ -12,18 +12,29 @@
 
 package tla2sany.semantic;
 
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Enumeration;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.Iterator;
-
-import tla2sany.st.TreeNode;
-import tla2sany.utilities.Strings;
-import tla2sany.utilities.Vector;
-import util.UniqueString;
-import util.WrongInvocationException;
+import java.util.List;
+import java.util.stream.Stream;
 
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
+
+import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
+import tla2sany.semantic.Context.Pair;
+import tla2sany.st.TreeNode;
+import tla2sany.utilities.Strings;
+import tla2sany.utilities.Vector;
+import tla2sany.xml.SymbolContext;
+import util.UniqueString;
+import util.WrongInvocationException;
 
 public class ModuleNode extends SymbolNode {
 
@@ -174,10 +185,12 @@ public class ModuleNode extends SymbolNode {
     * ModuleNode class.                                                    *
     ***********************************************************************/
 
-  private HashSet allExtendees = null ;
+  private HashMap<Boolean, HashSet<ModuleNode>> depthAllExtendeesMap = new HashMap<>();
     /***********************************************************************
     * The set of all modules that are extended by this module--either      *
-    * directly or indirectly.  Returned by getExtendModules                *
+    * directly or indirectly, keyed a Boolean representing whether the     *
+    * extendees are gathered recursively of not.                           *
+    * Returned by getExtendModules                                         *
     ***********************************************************************/
 
   private OpDeclNode[] constantDecls = null;
@@ -187,7 +200,7 @@ public class ModuleNode extends SymbolNode {
     // VARIABLEs declared in this module
 
 
-  private Vector definitions         = new Vector(8);
+  private ArrayList<SemanticNode> definitions = new ArrayList<>();
     // AssumeNodes, internal ModuleNodes, OpDefNodes, and TheoremNodes, in
     // the exact order they were defined in this module
     /***********************************************************************
@@ -208,7 +221,8 @@ public class ModuleNode extends SymbolNode {
     * It also contains ModuleNodes for inner modules, but not for modules  *
     * nested within them.                                                  *
     *                                                                      *
-    * It appears that this field is never used in SANY1.                   *
+    * It appears that this field is never used in SANY1; it is used by the *
+    * MCParser though.                                                     *
     ***********************************************************************/
 
   Vector recursiveDecls = new Vector(8);
@@ -217,7 +231,7 @@ public class ModuleNode extends SymbolNode {
     * RECURSIVE statements, in the order in which they were created.       *
     ***********************************************************************/
 
-  Vector opDefsInRecursiveSection = new Vector(16);
+  Vector<OpDefNode> opDefsInRecursiveSection = new Vector<>(16);
     /***********************************************************************
     * The list of all OpDefNode objects opd in this module, and in any     *
     * inner modules, with opd.recursiveSection >= 0.  (See the comments    *
@@ -336,8 +350,12 @@ public class ModuleNode extends SymbolNode {
     return (getConstantDecls().length == 0 &&
             getVariableDecls().length == 0);
   }
+  
+  public List<SemanticNode> getDefinitions() {
+	  return definitions;
+  }
 
-  public final void createExtendeeArray(Vector extendeeVec) {
+  public final void createExtendeeArray(Vector<ModuleNode> extendeeVec) {
     /***********************************************************************
     * This is called by Generator.processExtendsList to set the            *
     * ModuleNode's extendees field, which never seems to be used.          *
@@ -345,7 +363,7 @@ public class ModuleNode extends SymbolNode {
     extendees = new ModuleNode[extendeeVec.size()];
 
     for ( int i = 0; i < extendees.length; i++ ) {
-      extendees[i] = (ModuleNode)extendeeVec.elementAt(i);
+      extendees[i] = extendeeVec.elementAt(i);
     }
   }
 
@@ -358,7 +376,7 @@ public class ModuleNode extends SymbolNode {
   public final OpDeclNode[] getConstantDecls() {
     if (constantDecls != null) return constantDecls;
 
-    Vector contextVec = ctxt.getConstantDecls();
+    Vector<SemanticNode> contextVec = ctxt.getConstantDecls();
     constantDecls = new OpDeclNode[contextVec.size()];
     for (int i = 0, j = constantDecls.length - 1; i < constantDecls.length; i++) {
       constantDecls[j--] = (OpDeclNode)contextVec.elementAt(i);
@@ -374,7 +392,7 @@ public class ModuleNode extends SymbolNode {
    public final OpDeclNode[] getVariableDecls() {
     if (variableDecls != null) return variableDecls;
 
-    Vector contextVec = ctxt.getVariableDecls();
+    Vector<SemanticNode> contextVec = ctxt.getVariableDecls();
     variableDecls = new OpDeclNode[contextVec.size()];
     for (int i = 0, j = variableDecls.length - 1; i < variableDecls.length; i++) {
       variableDecls[j--] = (OpDeclNode)contextVec.elementAt(i);
@@ -402,6 +420,14 @@ public class ModuleNode extends SymbolNode {
     return opDefs;
   }
 
+  public final OpDefNode getOpDef(final String name) {
+	  return getOpDef(UniqueString.uniqueStringOf(name));
+  }
+
+  public final OpDefNode getOpDef(final UniqueString name) {
+	  return Stream.of(getOpDefs()).filter(o -> o.getName() == name).findFirst().orElse(null);
+  }
+
   /*************************************************************************
   * Returns an array of all ThmOrAssumpDefNode objects created in the      *
   * current module (but not in inner modules).  They should appear in the  *
@@ -419,14 +445,13 @@ public class ModuleNode extends SymbolNode {
     return thmOrAssDefs;
   }
 
-  /**
-   * Appends to vector of definitions in this module; should only be
-   * called with AssumeNodes, ModuleNodes, OpDefNodes and TheoremNodes
-   * as arguments.
-   */
-  public final void appendDef(SemanticNode s) {
-    definitions.addElement(s);
-  }
+	/**
+	 * Appends to vector of definitions in this module; should only be called with
+	 * AssumeNodes, ModuleNodes, OpDefNodes and TheoremNodes as arguments.
+	 */
+	public final void appendDef(SemanticNode s) {
+		definitions.add(s);
+	}
 
   /**
    * Returns array of the InstanceNode's representing module
@@ -529,6 +554,7 @@ public void setInstantiated(boolean isInstantiated) {
 
 /**
  * @return the isStandard
+ * @see tla2sany.modanalyzer.ParseUnit.isLibraryModule()
  */
 public boolean isStandard() {
 	return isStandard;
@@ -536,6 +562,7 @@ public boolean isStandard() {
 
 /**
  * @param isStandard the isStandard to set
+ * @see tla2sany.modanalyzer.ParseUnit.isLibraryModule()
  */
 public void setStandard(boolean isStandard) {
 	this.isStandard = isStandard;
@@ -592,20 +619,37 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
   }
 
 
-  public final HashSet getExtendedModuleSet() {
-    /***********************************************************************
-    * Returns a Hashset whose elements are ModuleNode objects representing  *
-    * all modules that are extended by this module--either directly or      *
-    * indirectly.                                                           *
-    ***********************************************************************/
-    if (this.allExtendees == null) {
-      this.allExtendees = new HashSet() ;
-      for (int i = 0; i < this.extendees.length; i++) {
-        this.allExtendees.add(this.extendees[i]) ;
-        this.allExtendees.addAll(this.extendees[i].getExtendedModuleSet()) ;
-       } // for
-      }; //if
-    return this.allExtendees ;
+  public final HashSet<ModuleNode> getExtendedModuleSet() {
+	  return getExtendedModuleSet(true);
+  }
+
+  /**
+   * @param recursively if true, the extendees of extendees of extendees of ...
+   * 						will be included; if false, only the direct extendees
+   * 						of this instance will be returned.
+   * @return
+   */
+  public final HashSet<ModuleNode> getExtendedModuleSet(final boolean recursively) {
+		/***********************************************************************
+		 * Returns a Hashset whose elements are ModuleNode objects representing *
+		 * all modules that are extended by this module--either directly or     *
+		 * indirectly.                                                          *
+		 ***********************************************************************/
+	  final Boolean key = Boolean.valueOf(recursively);
+	  HashSet<ModuleNode> extendeesSet = depthAllExtendeesMap.get(key);
+	  if (extendeesSet == null) {
+		  extendeesSet = new HashSet<>();
+		  for (int i = 0; i < this.extendees.length; i++) {
+			  extendeesSet.add(extendees[i]);
+			  if (recursively) {
+				  extendeesSet.addAll(extendees[i].getExtendedModuleSet(true));
+			  }
+		  }
+		  
+		  depthAllExtendeesMap.put(key, extendeesSet);
+	  }
+	  
+	  return extendeesSet;
   }
 
   public boolean extendsModule(ModuleNode mod) {
@@ -680,6 +724,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
 //  private SetOfArgLevelConstraints argLevelConstraints;
 //  private HashSet argLevelParams;
 
+  @Override
   public final boolean levelCheck(int itr) {
 
     if (levelChecked >= itr) return this.levelCorrect;
@@ -733,8 +778,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
       * opDefsInRecursiveSection vector.                                   *
       *********************************************************************/
       int curNodeIdx = firstInSectIdx ;
-      OpDefNode curNode =
-          (OpDefNode) opDefsInRecursiveSection.elementAt(curNodeIdx);
+      OpDefNode curNode = opDefsInRecursiveSection.elementAt(curNodeIdx);
       int curSection = curNode.recursiveSection ;
       boolean notDone = true ;
       while (notDone) {
@@ -758,8 +802,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
          else {curNode.levelChecked = 0 ;};
         curNodeIdx++ ;
         if (curNodeIdx < opDefsInRecursiveSection.size()) {
-          curNode = (OpDefNode)
-                        opDefsInRecursiveSection.elementAt(curNodeIdx);
+          curNode = opDefsInRecursiveSection.elementAt(curNodeIdx);
           notDone = (curNode.recursiveSection == curSection) ;
          }
         else {notDone = false ;} ;
@@ -777,7 +820,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
       HashSet recursiveLevelParams = new HashSet() ;
       HashSet recursiveAllParams = new HashSet() ;
       for (int i = firstInSectIdx ; i < curNodeIdx ; i++) {
-        curNode = (OpDefNode) opDefsInRecursiveSection.elementAt(i) ;
+        curNode = opDefsInRecursiveSection.elementAt(i) ;
         if (curNode.inRecursive) {curNode.levelChecked = 0 ;} ;
         curNode.levelCheck(1) ;
 
@@ -805,7 +848,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
       * for every operator in the recursive section.                       *
       *********************************************************************/
       for (int i = firstInSectIdx ; i < curNodeIdx ; i++) {
-        curNode = (OpDefNode) opDefsInRecursiveSection.elementAt(i) ;
+        curNode = opDefsInRecursiveSection.elementAt(i) ;
         if (curNode.inRecursive) {curNode.levelChecked = 2;} ;
         curNode.level = Math.max(curNode.level, maxRecursiveLevel) ;
         curNode.levelParams.addAll(recursiveLevelParams) ;
@@ -817,7 +860,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
       * recursive section.                                                 *
       *********************************************************************/
       for (int i = firstInSectIdx ; i < curNodeIdx ; i++) {
-        curNode = (OpDefNode) opDefsInRecursiveSection.elementAt(i) ;
+        curNode = opDefsInRecursiveSection.elementAt(i) ;
         if (curNode.inRecursive) {curNode.levelChecked = 1;} ;
         curNode.levelCheck(2) ;
        }; // for i
@@ -948,6 +991,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
     return this.levelCorrect;
   }
 
+  @Override
   public final int getLevel() {
       throw new WrongInvocationException("Internal Error: Should never call ModuleNode.getLevel()");
   }
@@ -1018,11 +1062,29 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
     // Otherwise this module is a constant module
     return true;
   }
+  
+	// TODO Change to take an action/operation that is to be executed on matching
+	// symbols. That way, clients don't have to iterate the result set again.
+	public Collection<SymbolNode> getSymbols(final SymbolMatcher symbolMatcher) {
+		final List<SymbolNode> result = new ArrayList<SymbolNode>(); // TreeSet to order result.
+		
+		final Enumeration<Pair> content = this.ctxt.content();
+		while (content.hasMoreElements()) {
+			final SymbolNode aSymbol = content.nextElement().getSymbol();
+			if (symbolMatcher.matches(aSymbol)) {
+				result.add(aSymbol);
+			}
+		}
+		
+		Collections.sort(result);
+		return result;
+	}
 
   /**
    * walkGraph, levelDataToString, and toString methods to implement
    * ExploreNode interface
    */
+  @Override
   public final String levelDataToString() {
     return "LevelParams: "         + getLevelParams()         + "\n" +
            "LevelConstraints: "    + getLevelConstraints()    + "\n" +
@@ -1031,6 +1093,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
   }
 
   private SemanticNode[] children = null;
+  @Override
   public SemanticNode[] getChildren() {
       if (children != null) {
           return children;
@@ -1047,17 +1110,19 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
       return children;
    }
 
-  public final void walkGraph (Hashtable semNodesTable) {
-    Integer uid = new Integer(myUID);
+  @Override
+  public final void walkGraph (Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
 
     if (semNodesTable.get(uid) != null) return;
 
     semNodesTable.put(uid, this);
+    visitor.preVisit(this);
     if (ctxt != null) {
-      ctxt.walkGraph(semNodesTable);
+      ctxt.walkGraph(semNodesTable, visitor);
     }
     for (int i = 0; i < topLevelVec.size(); i++) {
-      ((LevelNode)(topLevelVec.elementAt(i))).walkGraph(semNodesTable);
+      ((LevelNode)(topLevelVec.elementAt(i))).walkGraph(semNodesTable, visitor);
     }
 //     for (int i = 0; i < instanceVec.size(); i++) {
 //       ((InstanceNode)(instanceVec.elementAt(i))).walkGraph(semNodesTable);
@@ -1068,6 +1133,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
 //     for (int i = 0; i < assumptionVec.size(); i++) {
 //       ((AssumeNode)(assumptionVec.elementAt(i))).walkGraph(semNodesTable);
 //     }
+    visitor.postVisit(this);
   }
 
   public final void print(int indent, int depth, boolean b) {
@@ -1087,6 +1153,7 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
     }
   }
 
+  @Override
   public final String toString(int depth) {
     if (depth <= 0) return "";
 
@@ -1149,35 +1216,36 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
     return "ModuleNodeRef";
   }
 
-  protected Element getSymbolElement(Document doc, tla2sany.xml.SymbolContext context) {
+  protected Element getSymbolElement(Document doc, SymbolContext context) {
     Element ret = doc.createElement("ModuleNode");
     ret.appendChild(appendText(doc, "uniquename", getName().toString()));
 
     SemanticNode[] nodes = null;
     // constants
-    Element constants = doc.createElement("constants");
+    //Element constants = doc.createElement("constants");
     nodes = getConstantDecls();
     for (int i=0; i<nodes.length; i++) {
-      constants.appendChild(nodes[i].export(doc,context));
+      ret.appendChild(nodes[i].export(doc,context));
     }
-    ret.appendChild(constants);
+    //ret.appendChild(constants);
 
     // variables
-    Element variables = doc.createElement("variables");
+    //Element variables = doc.createElement("variables");
     nodes = getVariableDecls();
     for (int i=0; i<nodes.length; i++) {
-      variables.appendChild(nodes[i].export(doc,context));
+      ret.appendChild(nodes[i].export(doc,context));
     }
-    ret.appendChild(variables);
+    //ret.appendChild(variables);
 
     //operators
-    Element operators = doc.createElement("definitions");
+    //Element operators = doc.createElement("definitions");
     nodes = getOpDefs();
     for (int i=0; i<nodes.length; i++) {
-      operators.appendChild(nodes[i].export(doc,context)); //was with true to expand operators
+      ret.appendChild(nodes[i].export(doc,context)); //was with true to expand operators
     }
-    ret.appendChild(operators);
+    //ret.appendChild(operators);
 
+    /*
     //assumptions
     Element assums = doc.createElement("assumptions");
     nodes = getAssumptions();
@@ -1193,6 +1261,12 @@ final void addAssumption(TreeNode stn, ExprNode ass, SymbolTable st,
       thms.appendChild(nodes[i].export(doc,context));
     }
     ret.appendChild(thms);
+  */
+
+    nodes = getTopLevel();
+    for (int i=0; i<nodes.length; i++) {
+      ret.appendChild(nodes[i].export(doc,context));
+    }
 
     return ret;
   }
