@@ -5,11 +5,14 @@ package tla2sany.semantic;
 import java.math.BigInteger;
 import java.util.Hashtable;
 
-import tla2sany.st.TreeNode;
-
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
+
+import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
+import tla2sany.st.TreeNode;
+import tla2sany.xml.SymbolContext;
 
 /**
  * Describes a numeral like 4095.  This number is represented by the
@@ -64,15 +67,26 @@ public class NumeralNode extends ExprNode {
   public final int val() { return this.value; }
 
   public final BigInteger bigVal() { return this.bigValue; }
+  
+  	/**
+	 * @return true if the numerical value of this instance should be referenced via
+	 *         {@link #val()}, false if it should be referenced via
+	 *         {@link #bigVal()}
+	 */
+  public final boolean useVal() {
+	  return (bigValue == null);
+  }
 
   /**
    * Returns the value as a string--for example, "4095".  This string
    * reflects how the value appeared in the input, so it should be
    * "\O7777" if that's what appears in the source.
    */
+  @Override
   public final String toString() { return this.image; }
 
   /* Level Checking */
+  @Override
   public final boolean levelCheck(int iter) {
     levelChecked = iter;
       /*********************************************************************
@@ -107,13 +121,17 @@ public class NumeralNode extends ExprNode {
 //           "ArgLevelParams: "      + this.getArgLevelParams()      + "\n" ;
 //  }
 
-  public final void walkGraph(Hashtable semNodesTable) {
-    Integer uid = new Integer(myUID);
+  @Override
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
 
-    semNodesTable.put(new Integer(myUID), this);
+    semNodesTable.put(uid, this);
+    visitor.preVisit(this);
+    visitor.postVisit(this);
   }
 
+  @Override
   public final String toString(int depth) {
     if (depth <= 0) return "";
 
@@ -122,7 +140,8 @@ public class NumeralNode extends ExprNode {
 	   "; image: " + image);
   }
 
-  protected Element getLevelElement(Document doc, tla2sany.xml.SymbolContext context) {
+  @Override
+  protected Element getLevelElement(Document doc, SymbolContext context) {
       String v = (bigValue != null) ? bigValue.toString() : (Integer.toString(value));
       Element e = doc.createElement("IntValue");
       Node n = doc.createTextNode(v);
