@@ -4,12 +4,15 @@ package tla2sany.semantic;
 
 import java.util.Hashtable;
 
-import tla2sany.st.TreeNode;
-import tla2sany.utilities.Strings;
-import util.UniqueString;
-
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
+
+import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
+import tla2sany.st.TreeNode;
+import tla2sany.utilities.Strings;
+import tla2sany.xml.SymbolContext;
+import util.UniqueString;
 
 /***************************************************************************
 * This class represents a USE or HIDE statement.  It is of kind            *
@@ -101,6 +104,7 @@ public class UseOrHideNode extends LevelNode {
     } // for
   }
 
+  @Override
   public boolean levelCheck(int iter) {
     /***********************************************************************
     * Level checking is performed by level-checking the facts.  Since the  *
@@ -111,23 +115,27 @@ public class UseOrHideNode extends LevelNode {
     return this.levelCheckSubnodes(iter, facts) ;
    }
 
-  public void walkGraph(Hashtable semNodesTable) {
-    Integer uid = new Integer(myUID);
+  @Override
+  public void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor visitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
-    semNodesTable.put(new Integer(myUID), this);
+    semNodesTable.put(uid, this);
+    visitor.preVisit(this);
     for (int  i = 0; i < facts.length; i++) {
-      facts[i].walkGraph(semNodesTable);
+      facts[i].walkGraph(semNodesTable, visitor);
       } ;
     /***********************************************************************
     * Note: there's no need to walk the defs array because all the nodes   *
     * on it are walked from the nodes under which they appear.             *
     ***********************************************************************/
+      visitor.postVisit(this);
    }
 
   /*
    * The children are the facts.
    * @see tla2sany.semantic.SemanticNode#getChildren()
    */
+  @Override
   public SemanticNode[] getChildren() {
       if (this.facts == null || this.facts.length == 0) {
           return null;
@@ -139,6 +147,7 @@ public class UseOrHideNode extends LevelNode {
       return res;
    }
 
+  @Override
   public String toString(int depth) {
     if (depth <= 0) return "";
     String ret = "\n*UseOrHideNode:\n"
@@ -155,7 +164,8 @@ public class UseOrHideNode extends LevelNode {
     return ret;
    }
 
-  protected Element getLevelElement(Document doc, tla2sany.xml.SymbolContext context) {
+  @Override
+  protected Element getLevelElement(Document doc, SymbolContext context) {
     //SemanticNode.SymbolContext context = new SemanticNode.SymbolContext(context2);
     Element e = doc.createElement("UseOrHideNode");
 
